--- a/css/style.css
+++ b/css/style.css
@@ -1,157 +1,90 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: #dedede;
+    padding: 5px;
+    margin: 15px;
+    font-size: 25px;
+    font-family: Arial, sans-serif;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
 }
 
 h1 {
     text-align: center;
     font-family: Arial, sans-serif;
-    font-size: 32px;
+    font-size: 1.95em;
 }
 
-a {
-    color: #000;
-    text-decoration: none;
-    font-family: Arial, sans-serif;
-}
-
-p {
-    font-size: 25px;
-    font-family: Arial, sans-serif;
-}
-
-img {
-    width: 100%;
-}
-
-
-p {
+h2 {
     text-align: center;
 }
 
-div img {
-    display: block;
-    margin: auto;
+li {
+    margin-top: 20px;
 }
 
+img {
+    border: 5px solid black;
+    border-radius: 35px;
+    width: 100%;
+}
+
+figcaption, p{
+    text-align: center;
+
+}
+
+.label {
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 
 @media screen and (min-width: 772px) {
-    div {
-        width: 45vw;
-        display: inline-block;
+    .grid {
+        grid-template-columns: 1fr 1fr;
+
     }
 
+    .grid img {
+        border-radius: 50%;
+        height: 100%;
+    }
+
+    .grid figure:last-child {
+        grid-column: span 2;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .grid img {
+        border-radius: 0;
+    }
+
+    .grid figure:nth-child(3n) {
+        grid-column: span 2;
+    }
+}
+
+@media screen and (prefers-reduced-motion: reduce) {
+    html {
+        scroll-behavior: unset;
+    }
+}
+
+@media screen and (prefers-color-scheme: dark) {
+    body {
+        background-color: rgb(65, 65, 65);
+        color: lightyellow;
+    }
     img {
-        max-height: 30vh;
+        border: 5px solid black;
     }
-
 }
 
-@media screen and (min-width: 998px) {
-    div {
-        width: 30vw;
-        display: inline-block;
-    }
-
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* 
-main {
-    border: 5px #000 solid;
-    margin: 10px;
-}
- */
-/* 
-
-.container {
-    display: grid;
-    grid-template-columns: 1fr;
-    justify-items: center;
-}
- */
-/* img{
-    width: 200px;
-    height: 200px;
-    padding: 5px;
-} */
-
-/* .child {
-    position: relative;
-    display: inline-block;
-    border: 5px black solid;
-    margin: 5px;
-    border-radius: 5px;
-} */
-
-/* 
-
-.label {
-    display: none;
-    position: absolute;
-    top: 40%;
-    left: 40%;
-} */
-/* 
-.button {
-    display: inline-block;
-    border: 2px solid #000;
-    padding: 5px;
-    border-radius: 25px;
-}
- */
-/* 
-.button:hover {
-    background-color:#fff;
-} */
-
-/* 
-footer {
-    display: flex;
-    justify-content: center;
-} */
-
-/* 
-header {
-    border-radius: 5px;
-    border: 5px #000 solid;
-    margin: 10px;
-} */
-
-/* 
-.label {
-    display: none;
-    position: absolute;
-    top: 40%;
-    left: 40%;
-} */
-/* 
-.child:hover .label {
-    display: block;
-} */
